--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 this should be a simple one line script call from command line
 will want to include list of GPIO pin numbers (assume BCM) and topic and host
+make sure to call GPIO.cleanup() at the end
